[dataengines/weather/dwd] Properly detect empty reply

The reply may be non-null but empty, which leads to a crash later

BUG: 457606
(cherry picked from commit 01a92d4e81f04044621ac6d4d0e9464b6fc93ff9)